api url changed

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
         "WATCH_MODE": true,
         "TS_NODE_COMPILER_OPTIONS": "{\"target\": \"es5\", \"module\": \"commonjs\"}",
         "THREADED": false,
-        "API_HOST": "http://localhost:8000"
+        "API_HOST": "http://local.toxin.com"
       }
     },
     "watch:prod": {
@@ -67,7 +67,7 @@
         "TS_NODE_FILES": true,
         "TS_NODE_COMPILER_OPTIONS": "{\"target\": \"es5\", \"module\": \"commonjs\"}",
         "THREADED": false,
-        "API_HOST": "http://localhost:8000"
+        "API_HOST": "http://local.toxin.com"
       }
     },
     "build:prod": {
